<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/start_report_layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#666666"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1px"
        android:background="#cccccc"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="right|center_vertical"
            android:paddingRight="5dp"
            android:layout_marginRight="1px"
            android:text="@string/line_select_label"
            android:textColor="#444444"
            android:textSize="20dp" />

        <com.freefoam.productionreports.InstantAutoCompleteTextView
            android:id="@+id/selectLine"
            android:layout_width="match_parent"
    		android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="24dp"
            android:textColor="#FFFFFF"
            android:hint="@string/select_line_prompt"
            android:prompt="@string/select_line_prompt"
            android:background="#999999"
            android:imeOptions="flagNoExtractUi"
            android:windowSoftInputMode="stateAlwaysHidden" >
        </com.freefoam.productionreports.InstantAutoCompleteTextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1px"
        android:background="#cccccc"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="right|center_vertical"
            android:paddingRight="5dp"
            android:layout_marginRight="1px"
            android:text="@string/product_select_label"
            android:textColor="#444444"
            android:textSize="20dp" />

        <AutoCompleteTextView
            android:id="@+id/selectProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="1"
            android:background="#999999"
            android:textStyle="bold"
            android:textSize="24dp"
            android:textColor="#FFFFFF"
            android:ems="10"
            android:hint="@string/select_product_prompt"
            android:inputType="textCapCharacters"
            android:imeOptions="flagNoExtractUi"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="#cccccc"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="right|center_vertical"
            android:paddingRight="5dp"
            android:layout_marginRight="1px"
            android:text="@string/operator_select_label"
            android:textColor="#444444"
            android:textSize="20dp" />

        <com.freefoam.productionreports.InstantAutoCompleteTextView
            android:id="@+id/selectOperator"
            android:layout_width="match_parent"
    		android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="24dp"
            android:textColor="#FFFFFF"
            android:hint="@string/select_operator_prompt"
            android:prompt="@string/select_operator_prompt"
            android:background="#999999"
            android:imeOptions="flagNoExtractUi"
            android:windowSoftInputMode="stateAlwaysHidden" >
        </com.freefoam.productionreports.InstantAutoCompleteTextView>

    </LinearLayout>

</LinearLayout>